syntax = "proto3";

option java_outer_classname = "BookServiceProto";
option java_multiple_files = true;
package com.booster.AssesmentFinal.grpc;

service BookService {
  rpc GetBook (BookRequest) returns (BookResponse);
  rpc CreateBook (CreateBookRequest) returns (BookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (BookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
}

message BookRequest {
  string id = 1;
}

message BookResponse {
  string id = 1;
  string name = 2;
  string autor = 3;
}

message CreateBookRequest {
  string name = 1;
  string autor = 2;
}

message UpdateBookRequest {
  string id = 1;
  string name = 2;
  string autor = 3;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}